@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-11-13T16:21:01Z",
-  "count_outdated" : 438,
-  "uniques_outdated" : 239,
-  "count" : 452,
-  "uniques" : 249,
+  "timestamp" : "2022-11-14T01:21:00Z",
+  "count_outdated" : 447,
+  "uniques_outdated" : 247,
+  "count" : 454,
+  "uniques" : 251,
   "clones" : [
-    {
-      "timestamp": "2022-10-30T00:00:00Z",
-      "count": 8,
-      "count_minmax": [ 1, 9 ],
-      "uniques": 7,
-      "uniques_minmax": [ 1, 8 ]
-    },
     {
       "timestamp": "2022-10-31T00:00:00Z",
       "count": 3,
@@ -28,6 +21,13 @@
     },
     {
       "timestamp": "2022-11-02T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-11-13T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
