@@ -1,12 +1,7 @@
 {
-  "count": 14,
-  "uniques": 8,
+  "count": 7,
+  "uniques": 1,
   "clones": [
-    {
-      "timestamp": "2022-10-30T00:00:00Z",
-      "count": 8,
-      "uniques": 7
-    },
     {
       "timestamp": "2022-10-31T00:00:00Z",
       "count": 3,
@@ -19,6 +14,11 @@
     },
     {
       "timestamp": "2022-11-02T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-11-13T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
