@@ -1,3 +1,11 @@
+2022-11-14T01:21:00Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3457801104 # 611
+* notice: last 14d: unq all: 1 7
+* notice: prev accum: outdated-unq outdated-all / unq all: 239 438 / 249 452
+* notice: next accum: outdated-unq outdated-all / unq all: 247 447 / 251 454
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [2022-10-30] / [2022-11-13]
+
 2022-11-13T16:21:01Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/3456022059 # 610
 * notice: last 14d: unq all: 8 14
